--- a/VRChat/34/1340334.html
+++ b/VRChat/34/1340334.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "pXMOxGdUO+iIwhLjGvTa9yv9OkNY+vIYo4TuRhkufhs="></script>
+    "Mmx36YWFqRiSn0Nvrc+D17BMBrd7OpJgug2tujQQndQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"タンス","description":"タンス\n\n■モデル製作：ハザマススム\n　□Twitter https://twitter.com/hazama_susumu\n\n■説明\n　□タンスです\n\n■内容物\n　□\n  Chest.fbx\n  chest.png\n  Chest.prefab\n  drawer.png\n  README.txt\n  Materials\n\t  chest.mat\n\t  drawer.mat\n\n■免責\n　□このモデルデータを使って起きた不利益は\n　　いかなる場合でも製作者は一切責任を負いません\n　□著作権はハザマススムにあります\n\n■許可\n　□非商用・商用利用\n　□非改変・改変利用\n　□改変した後の再配布\n\n■禁止事項\n　□無改変での再配布\n　□自作発言\n　□迷惑行為\n","url":"https://booth.pm/ja/items/1340334","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/353af48e-2d96-4325-9c66-ad3463af6bc1/i/1340334/1c576ff7-6a69-48a7-a059-51665e22de1a_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pXMOxGdUO+iIwhLjGvTa9yv9OkNY+vIYo4TuRhkufhs="></script>
+    nonce="Mmx36YWFqRiSn0Nvrc+D17BMBrd7OpJgug2tujQQndQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -117,6 +117,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1340334/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               13
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1340334/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               13
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
