--- a/VRChat/24/1339724.html
+++ b/VRChat/24/1339724.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "KQNHN4UV/4eiJGPvFAAnP+tK4AKi8RYaH4CUOw5GHwI="></script>
+    "Nv0voIPcSrcHPV7A2WA8ubShG1XS9hKyshtdKY7EIM4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"「3Dモデル」ショーケース","description":"展示用ショーケース\nVRChat等で小物をショーケースに入れて鑑賞いただける美術館や博物館などによくあるショーケースを製作しました。","url":"https://booth.pm/ja/items/1339724","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/a078e889-f002-4368-8380-bca47499c70b/i/1339724/2d43f44d-e813-420e-b01e-2a23ccfbf8f5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KQNHN4UV/4eiJGPvFAAnP+tK4AKi8RYaH4CUOw5GHwI="></script>
+    nonce="Nv0voIPcSrcHPV7A2WA8ubShG1XS9hKyshtdKY7EIM4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1339724/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1339724/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
