--- a/VRChat/77/1339977.html
+++ b/VRChat/77/1339977.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hyQ5U5isRwpCg9q/kgw5pphvS3mCXYET4RJ7LZXYTmc="></script>
+    "wEojrs7RNxuu2HLRdvX+o3v1X34eftbiPzLEOOZkPJc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC向け「バイクキーホルダー(ネイキッドver.)」","description":"バイクの形のキーホルダーを作ったのだ！\n\nVRChatでアバターに身に付けたりするとよいのだ！\n\nポリゴン数は▲1028\nダイナミックボーンの値も設定済なのだ！\n（ダイナミックボーンはunityの有償アセットなのだ、揺らしたい場合はそっちを先にインポートしてから入れるとよいのだ）\n\nVRC向けのunitypackageになっているのだ！\n\n要望や不具合などがあったらTwitterのDMまで知らせてほしいのだ！","url":"https://booth.pm/ja/items/1339977","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/8d9d1fb7-104d-4c64-8a88-79480e72d300/i/1339977/e0d29ff5-e052-4c6f-a55c-a0a276257cb0_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hyQ5U5isRwpCg9q/kgw5pphvS3mCXYET4RJ7LZXYTmc="></script>
+    nonce="wEojrs7RNxuu2HLRdvX+o3v1X34eftbiPzLEOOZkPJc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1339977/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1339977/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
