--- a/VRChat/19/1339919.html
+++ b/VRChat/19/1339919.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zMnedmdwBkr57p02FkQTronJ0lQEcCO1f+m9ZBStiME="></script>
+    "yq+M4co6gA/7H2yzJhFeaFybbbsPFyTs2i0C0h/ePb8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"令和の空気たっぷり缶詰 3Dモデル","description":"”缶詰”の3Dモデル紹介\n\n新元号に変わったので初日の空気を電子的に取り込み\n3Dモデルに落とし込むことが成功しました！！\n\nこの令和の空気を電子内でも感じれるようにここに置いておきます。\n\nシェイプキーで蓋を開けて中身を散布することもできます。\n相手に令和を感じさせてやりましょう！\n\n\n本セットは【VRChat】向けに作成したものです。\nというかなんでもありです。\n\n●内容物\n\n・令和の缶詰.unitypackage\n・FBXデータ,Blenderファイル,UVファイル,Texファイル\n・画像資料\n・Readme\n\n\n------------------------------\n\n●利用条件\n\nなんでもあり\n\n●免責事項\n\n・本データを使用し、何れかの不都合が生じたとしても当方は責任はさすがに負いかねますのでご了承ください。\n\n\n■禁止事項\n\n・公序良俗に反する行為、政治・宗教活動、誹謗中傷目的での使用","url":"https://booth.pm/ja/items/1339919","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/266c358f-8e7e-41bc-bd4e-a1da54b572e7/i/1339919/3ec3455f-f86c-4e62-b46e-594a0edd85fa_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zMnedmdwBkr57p02FkQTronJ0lQEcCO1f+m9ZBStiME="></script>
+    nonce="yq+M4co6gA/7H2yzJhFeaFybbbsPFyTs2i0C0h/ePb8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1339919/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1339919/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
