--- a/VRChat/51/1339551.html
+++ b/VRChat/51/1339551.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "FbJ+h6voNQ2SRQ5egETegM+kDAU5x8uOjZtespyEUmo="></script>
+    "naDPHXeMvHOls1FE1J3+P1jQ0JAeBD6YDqhvB64+xqs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"黒鬼装甲　夜叉ノ胸椎","description":"English explanation is at the bottom of this page.\n\n黒鬼装甲シリーズの鎧(armor)です。\nカラーバリエーションは\n１０色 × オーナメント３種（あり２種＋なし１種）＝３０セットです。\n\n\n本作品はVRChatやUnityでの利用を想定しております。\nゲーム、配信等での使用も可能です。\n\n2019/09/26～10/02に開催されます落選マーケットに出展させていただきます！","url":"https://booth.pm/ja/items/1339551","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/eb7cde3f-8485-4ff2-b79c-34ed3e90b219/i/1339551/f77d43a9-7d1b-47b6-b71f-c89451616d5b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FbJ+h6voNQ2SRQ5egETegM+kDAU5x8uOjZtespyEUmo="></script>
+    nonce="naDPHXeMvHOls1FE1J3+P1jQ0JAeBD6YDqhvB64+xqs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1339551/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               406
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1339551/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               406
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
