--- a/VRChat/90/1339390.html
+++ b/VRChat/90/1339390.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "vBTtJ0C8BoEK1mmmlkC8V94m9QMMxzdJ5/3gV8PDd8A="></script>
+    "3M8eDaG7IraJSZZkD/31k947+eE0FcKuSvIIEwI9U/0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】AF-002 BrandAngriff V2","description":"火力強化型の量産型機動兵器\n\n近接突撃仕様のTypeAと火力制圧型のTypeDの2種類の武装\n\nAVATARS 3.0対応\n\n導入時はSDK3-Avatarsを使用してください。\n\nVRChatでの仕様を想定していますが、利用規約の範囲内であればゲーム・動画等その他の用途での使用も可能です。","url":"https://booth.pm/ja/items/1339390","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/d3d523d1-e84d-4b41-911c-4b8144839726/i/1339390/4e9bb5ec-37d4-4789-979f-ea283e3e5b4f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vBTtJ0C8BoEK1mmmlkC8V94m9QMMxzdJ5/3gV8PDd8A="></script>
+    nonce="3M8eDaG7IraJSZZkD/31k947+eE0FcKuSvIIEwI9U/0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1339390/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               247
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1339390/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               247
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
