--- a/VRChat/35/1286735.html
+++ b/VRChat/35/1286735.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "tDajCi+TkAoTPY3NiUuxDFsFbAz8e+Ox2/Cw13ryCnA="></script>
+    "CmAey67Hq3p00pYLvR39ZFPbKQlvtOwQl1YF6U8iEeM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRoid β】MA-1ジャケット風テクスチャ【無料配布あり】","description":"＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊\n\nVRoid Studio正式版　未対応商品です。\nStable Version for VRoid Studio is not supported.\n\n＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊＊\n\nMA-1フライトジャケット風　VRoidStadio用テクスチャです。\n\n****************************\n\n\nご購入の前にこちらの利用規約をご確認ください。\n\nhttps://tomatoma326.wixsite.com/dusten/kiyaku\n\n\n****************************\n\n\n前回配布していたものは黒、クリーム、ベージュ、チャコール、カーキでしたが、茶系に偏っていたためベージュをグレーに変更。\n\nところどころ粗のあったテクスチャを修正し、おまけでなんちゃってロングインナーも追加しています。無理矢理腰の下まで裾を伸ばしていますので、細かいところが気になる方は素体に読み込むタイプのインナーを別にご用意ください。\n\nダウンロードしてそのまま衣装として使えるようになりました。\n\n★Shop Dust制服チェックズボンセット★\nhttps://kzakt-fujisak.booth.pm/items/1854957\n\n☆☆☆\n\n\n\n\n無料版はジャケット黒＋白インナー。\n支援A版は全色＋白インナーがそれぞれ付属しています。\n\n\n支援B版は全色＋白インナー＋肩回り修正テクスチャ入り。\n\n激しい動きをした時に肩のあたりから肌が出てしまう仕様を目立たなくする補正テクスチャが同梱。\n\nまた支援B版にはおまけでグレー＋黒のジャケットテクスチャが入っています。\n\n\n\n☆☆☆\n\n\n\n【OK】\n\n・加工・改変はご自由にどうぞ。\n\n・VRChat、MMDなどVRoid以外での使用も可能です。\n\n\n【NG】\n\n・テクスチャを素材として再配布、販売。\n\n\nダウンロード後のトラブル等は一切受け付けておりません。\n念のため、無料版でお試しして頂いてからのご利用をお願いいたします。\n\n予告なく配布物の内容が変更されることがあります。ご了承ください。","url":"https://booth.pm/ja/items/1286735","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"200"},"image":"https://booth.pximg.net/c/620x620/9c4efb82-40c9-4f84-8180-5c02574c865f/i/1286735/bebe3e4a-7fe1-447f-a62b-6635b31709e0_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="tDajCi+TkAoTPY3NiUuxDFsFbAz8e+Ox2/Cw13ryCnA="></script>
+    nonce="CmAey67Hq3p00pYLvR39ZFPbKQlvtOwQl1YF6U8iEeM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1286735/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               433
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1286735/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               433
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
